<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_resign"
        android:icon="@drawable/ic_flag_white_24dp"
        android:title="@string/resign_game"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/item_flip_board"
        android:icon="@drawable/ic_loop_white_24dp"
        android:title="@string/flip_board"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/item_start_analysis"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/analyze"
        android:visible="true"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/item_stop_analysis"
        android:icon="@drawable/ic_stop_white_24dp"
        android:title="@string/stop_analysis"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/item_editboard"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/edit_board">
    </item>
    <item
        android:id="@+id/bluetooth_submenu"
        android:title="@string/bluetooth"
        app:showAsAction="always"
        android:icon="@drawable/ic_bluetooth_white_24dp">
        <menu>
            <item
                android:id="@+id/bluetooth_set_discoverable"
                android:checkable="true"
                android:title="@string/bluetooth_discoverable"/>
            <item
                android:id="@+id/bluetooth_create"
                android:title="@string/create_bluetooth_game"/>
            <item
                android:id="@+id/bluetooth_reset"
                android:title="@string/bluetooth_reset"/>
        </menu>
    </item>
    <item
        android:id="@+id/item_load_pgn_file"
        android:title="@string/load_pgn"/>
    <item
        android:id="@+id/item_settings"
        android:title="@string/settings"/>
    <item
        android:id="@+id/item_draw"
        android:title="@string/offer_draw"/>
    <item
        android:id="@+id/item_goto_move"
        android:title="@string/go_to_move_number"/>
    <item
        android:id="@+id/item_force_move"
        android:title="@string/force_computer_move"/>
    <!--<item-->
        <!--android:id="@+id/select_book"-->
        <!--android:title="@string/select_opening_book"/>-->
    <item
        android:id="@+id/item_about"
        android:title="@string/about_help"/>
</menu>
